# UnityTextureLoader

./: .gitignore  LICENSE  README.md
InkingTextureLoader/: CMakeLists.txt  build_android.bat
InkingTextureLoader/TextureLoader/: CMakeLists.txt
InkingTextureLoader/TextureLoader/Source/: ColorSpace.h  ITextureLoader.h  RefCounter.h  Texture.cpp  Texture.h  Texture2D.h  TextureLoadAsyncOpeartionState.h  TextureLoadAsyncOperation.h  TextureLoadAsyncOperationState.h  TextureLoadMode.h  TextureLoaderD3D11.cpp  TextureLoaderD3D11.h  TextureLoaderOpenGLES.cpp  TextureLoaderOpenGLES.h  TextureLoaderOpenGLES2.h  TextureLoaderOpenGLES3.h  Typedef.h  UnityTextureLoader.cpp  UnityTextureLoader.h  UnityTextureLoaderExports.cpp  UnityTextureLoaderExports.h
UnityPlugin/: TextureLoader.unitypackage
UnityTextureLoader/: NativeGallery.Editor.csproj  NativeGallery.Runtime.csproj  Unity.CollabProxy.Editor.csproj  Unity.Rider.Editor.csproj  Unity.TextMeshPro.Editor.csproj  Unity.TextMeshPro.csproj  Unity.Timeline.Editor.csproj  Unity.Timeline.csproj  Unity.VSCode.Editor.csproj  UnityEditor.TestRunner.csproj  UnityEngine.TestRunner.csproj  UnityTextureLoader.csproj  UnityTextureLoader.sln
UnityTextureLoader/Assets/: TextureLoaderTest.cs
UnityTextureLoader/Assets/Inking/TextureLoader/Plugins/Android/: InkingTextureLoader.aar
UnityTextureLoader/Assets/Inking/TextureLoader/Plugins/iOS/ResourceLoader_iOS.framework/: Info.plist  ResourceLoader_iOS
UnityTextureLoader/Assets/Inking/TextureLoader/Plugins/iOS/ResourceLoader_iOS.framework/Headers/: ResourceLoader_iOS.h
UnityTextureLoader/Assets/Inking/TextureLoader/Plugins/iOS/ResourceLoader_iOS.framework/Modules/: module.modulemap
UnityTextureLoader/Assets/Inking/TextureLoader/Scenes/: TextureLoader.unity
UnityTextureLoader/Assets/Inking/TextureLoader/Scripts/: Texture2D.cs  TextureLoadAsyncOperation.cs  TextureLoadAsyncOperationState.cs  TextureLoadResult.cs  TextureLoader.cs  TextureLoaderTest.cs
UnityTextureLoader/Assets/Scenes/: InkingTextureLoader.unity  TextureLoader.unity  TextureLoaderTest.cs
UnityTextureLoader/Assets/Scripts/: TextureLoaderTest.cs
